[package]
name = "spk_recovery"
version = "0.0.1"
edition = "2021"

[dependencies]
bwk = "0.0.8"
bwk-electrum = "0.0.4"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3"
iced = { version = "0.13", features = ["tokio"] }
miniscript = "12.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
