[package]
name = "spk_recovery"
version = "0.0.1"
edition = "2021"

[dependencies]
bip39 = "2.0.0"
bwk-electrum = { git = "https://github.com/pythcoiner/bwk.git", rev = "e85de4f"}
bwk-tx = { git = "https://github.com/pythcoiner/bwk.git", rev = "e85de4f"}
bwk-sign = { git = "https://github.com/pythcoiner/bwk.git", rev = "e85de4f", default-features = false }
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3"
iced = { version = "0.13" }
miniscript = "12.3.5"
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.145"

[patch.crates-io]
bitcoin = { git = "https://github.com/pythcoiner/rust-bitcoin.git", rev = "d7998651" }
